tests/baselines/reference/structWithoutExplicitConstructor.errors.txt
tests/cases/conformance/structs/constructorDeclarations/automaticConstructors/structWithoutExplicitConstructor.ts(10,10): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/conformance/structs/constructorDeclarations/automaticConstructors/structWithoutExplicitConstructor.ts (1 errors) ====
    // doc 3.3
    // If a struct omits a constructor declaration, an automatic constructor is provided.
    
    struct C {
        x = 1
        y = 'hello';
    }
    
    var c = new C();
    var c2 = new C(null); // error, Supplied parameters do not match any signature of call target
             ~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    
    /* struct D<T extends Date> {
        x = 2
        y: T = null;
    }
    
    var d = new D();
    var d2 = new D(null); // error, Supplied parameters do not match any signature of call target
    	*/